[package]
name = "bevy-tanks"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"
leafwing-input-manager = "0.10.0"

[dev-dependencies]
bevy_dylib = "0.11.2"

[profile.dev]
opt-level = 1
package."*".opt-level = 3

[profile.release]
opt-level = "s"
lto = "fat" # https://doc.rust-lang.org/cargo/reference/profiles.html#lto
